--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,8 +16,9 @@
         <div class="logo">Galleriya</div>
         <nav>
             <ul>
+                <li><a href="upload.html">업로드</a></li>
                 <li><a href="index.html" class="active">커뮤니티</a></li>
-                <li><a href="#footer">문의</a></li>
+                <li><a href="contact.html">문의</a></li>
             </ul>
         </nav>
     </header>
