--- a/frontend/public/upload.html
+++ b/frontend/public/upload.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="upload.html" class="active">업로드</a></li>
                 <li><a href="index.html">커뮤니티</a></li>
-                <li><a href="#footer">문의</a></li>
+                <li><a href="contact.html">문의</a></li>
             </ul>
         </nav>
     </header>
