--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,17 +12,6 @@
 <body>
     <div class="background-animation"></div>
 
-    <header class="main-header">
-        <div class="logo">Galleriya</div>
-        <nav>
-            <ul>
-                <li><a href="upload.html">업로드</a></li>
-                <li><a href="index.html" class="active">커뮤니티</a></li>
-                <li><a href="contact.html">문의</a></li>
-            </ul>
-        </nav>
-    </header>
-
     <div class="hero-spacer"></div>
 
     <main>
@@ -35,33 +24,31 @@
     </main>
 
     <!-- Lightbox Modal -->
-    <div id="lightbox" class="lightbox" style="display: none;">
+    <div id="lightbox" class="lightbox">
         <span class="close-lightbox">&times;</span>
         <div class="lightbox-container">
             <div class="lightbox-image-area">
-                <img class="lightbox-content" id="lightbox-img">
+                <img id="lightbox-img" class="lightbox-content" src="" alt="Full size">
             </div>
             <div class="lightbox-comment-area">
                 <div class="lightbox-header">
-                    <h3>댓글</h3>
-                    <div id="caption" class="lightbox-caption"></div>
+                    <h3 style="color:white; margin:0;">Comments</h3>
+                    <p class="lightbox-caption" id="lightbox-caption"></p>
                 </div>
-                <div id="comments-list" class="comments-list">
-                    <!-- Comments will act here -->
+                <div class="comments-list" id="comments-list">
+                    <!-- Comments injected here -->
                 </div>
-                <div class="comment-form">
-                    <input type="text" id="comment-input" placeholder="익명으로 댓글 달기..." autocomplete="off">
-                    <button id="send-comment">등록</button>
-                </div>
+                <!-- Comment form and delete button injected by JS -->
             </div>
         </div>
     </div>
 
     <footer id="footer">
         <p>문의: contact@galleriya.com</p>
-        <p>&copy; 2024 Galleriya. 익명. 한시적. 아름다움.</p>
+        <p>&copy; 2025 Galleriya. Anonymous Photo Sharing.</p>
     </footer>
 
+    <script src="js/header.js"></script>
     <script src="js/main.js"></script>
 </body>
 
