--- a/frontend/public/upload.html
+++ b/frontend/public/upload.html
@@ -36,119 +36,12 @@
     </main>
 
     <footer id="footer">
-        <p>문의: contact@galleriya.com</p>
-        <p>&copy; 2024 Galleriya. 익명. 한시적. 아름다움.</p>
+        <p>문의: sinsa9122@naver.com</p>
+        <p>&copy; 2026 Galleriya. 익명. 한시적. 아름다움.</p>
     </footer>
 
     <script src="js/upload.js"></script>
     <script src="js/header.js"></script>
-    <script>
-        const fileInput = document.getElementById('fileInput');
-        const fileNameDisplay = document.getElementById('fileName');
-        const previewImg = document.getElementById('preview-img');
-        const placeholderIcon = document.querySelector('.placeholder-icon');
-        const previewContainer = document.getElementById('previewContainer');
-
-        fileInput.addEventListener('change', function (e) {
-            if (this.files && this.files.length > 0) {
-                const file = this.files[0];
-                fileNameDisplay.textContent = file.name;
-
-                // Preview with resizing
-                const reader = new FileReader();
-                reader.onload = function (event) {
-                    const img = new Image();
-                    img.onload = function () {
-                        const canvas = document.createElement('canvas');
-                        const ctx = canvas.getContext('2d');
-
-                        // Calculate new dimensions (max 500px width/height)
-                        const MAX_SIZE = 500;
-                        let width = img.width;
-                        let height = img.height;
-
-                        if (width > height) {
-                            if (width > MAX_SIZE) {
-                                height *= MAX_SIZE / width;
-                                width = MAX_SIZE;
-                            }
-                        } else {
-                            if (height > MAX_SIZE) {
-                                width *= MAX_SIZE / height;
-                                height = MAX_SIZE;
-                            }
-                        }
-
-                        canvas.width = width;
-                        canvas.height = height;
-                        ctx.drawImage(img, 0, 0, width, height);
-
-                        const dataUrl = canvas.toDataURL(file.type);
-                        previewImg.src = dataUrl;
-                        previewImg.style.display = 'block';
-                        // Ensure full image is visible
-                        previewImg.style.objectFit = 'contain';
-                        placeholderIcon.style.display = 'none';
-
-                        // Auto-adjust container size
-                        previewContainer.style.minHeight = 'auto';
-                        previewContainer.style.height = 'auto';
-                        previewContainer.style.padding = '10px'; // Add slight padding for aesthetics
-                    };
-                    img.src = event.target.result;
-                };
-                reader.readAsDataURL(file);
-            } else {
-                fileNameDisplay.textContent = '선택된 파일 없음';
-                previewImg.style.display = 'none';
-                placeholderIcon.style.display = 'block';
-
-                // Reset container size
-                previewContainer.style.minHeight = '300px';
-                previewContainer.style.height = '';
-                previewContainer.style.padding = '';
-            }
-        });
-
-        // Upload functionality
-        const uploadBtn = document.querySelector('.upload-btn');
-        uploadBtn.addEventListener('click', async (e) => {
-            e.preventDefault();
-
-            if (!fileInput.files || fileInput.files.length === 0) {
-                alert('파일을 먼저 선택해주세요.');
-                return;
-            }
-
-            const formData = new FormData();
-            formData.append('file', fileInput.files[0]);
-
-            try {
-                uploadBtn.disabled = true;
-                uploadBtn.textContent = '업로드 중...';
-
-                const API_URL = 'http://127.0.0.1:5000/api';
-                const response = await fetch(`${API_URL}/upload`, {
-                    method: 'POST',
-                    body: formData
-                });
-
-                if (response.ok) {
-                    alert('성공적으로 업로드되었습니다!');
-                    window.location.href = 'index.html';
-                } else {
-                    const errorData = await response.json();
-                    alert(`업로드 실패: ${errorData.error || '알 수 없는 오류'}`);
-                }
-            } catch (error) {
-                console.error('Error uploading file:', error);
-                alert('서버 연결 오류가 발생했습니다.');
-            } finally {
-                uploadBtn.disabled = false;
-                uploadBtn.textContent = '업로드';
-            }
-        });
-    </script>
 </body>
 
 </html>
